Fixing colour contrast issues on Find,apply,accept block

--- a/docroot/themes/capit/stylesheets/main.css
+++ b/docroot/themes/capit/stylesheets/main.css
@@ -1189,3 +1189,5 @@ and (orientation : portrait) {
     height: 270px;
   }
 }
+
+#block-findapplyaccept a { color: #1F476B; }
